@@ -679,6 +679,8 @@ $TCA['fe_groups'] = array (
 	'ctrl' => array (
 		'label' => 'title',
 		'tstamp' => 'tstamp',
+		'crdate' => 'crdate',
+		'cruser_id' => 'cruser_id',
 		'delete' => 'deleted',
 		'prependAtCopy' => 'LLL:EXT:lang/locallang_general.xml:LGL.prependAtCopy',
 		'enablecolumns' => array (
@@ -697,6 +699,8 @@ $TCA['sys_domain'] = array (
 	'ctrl' => array (
 		'label' => 'domainName',
 		'tstamp' => 'tstamp',
+		'crdate' => 'crdate',
+		'cruser_id' => 'cruser_id',
 		'sortby' => 'sorting',
 		'title' => 'LLL:EXT:cms/locallang_tca.xml:sys_domain',
 		'iconfile' => 'domain.gif',
